[package]
name = "fibonacci_node"
version = "0.1.0"
authors = ["Joaquin Salazar <joaco.random33@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "fibonacci_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
rug = "1.9.0"